Project_meandyou/lrg/prompting/templates/coverage-contradiction-tax/v0.2/turn2.md
<user> <ข้อกฎหมาย>
<law section=81 ประมวลรัษฎากร> ประมวลรัษฎากร มาตรา 81 ให้ยกเว้นภาษีมูลค่าเพิ่มสำหรับการประกอบกิจการประเภทต่าง ๆ ดังต่อไปนี้
(1) การขายสินค้าที่มิใช่การส่งออก หรือการให้บริการดังต่อไปนี้
(ก) การขายพืชผลทางการเกษตร ไม่ว่าจะเป็นลำต้น กิ่ง ใบ เปลือก หน่อ ราก เหง้า ดอก หัว ฝัก เมล็ด หรือส่วนอื่น ๆ ของพืช และวัตถุพลอยได้จากพืช ทั้งนี้ ที่อยู่ในสภาพสด หรือรักษาสภาพไว้เพื่อมิให้เสียเป็นการชั่วคราวในระหว่างขนส่งด้วยการแช่เย็น แช่เย็นจนแข็ง หรือด้วยการจัดทำหรือปรุงแต่งโดยวิธีการอื่น หรือรักษาสภาพไว้เพื่อมิให้เสียเพื่อการขายปลีกหรือขายส่งด้วยวิธีการแช่เย็น แช่เย็นจนแข็ง ทำให้แห้ง บด ทำให้เป็นชิ้น หรือด้วยวิธีอื่น ข้าวสารหรือผลิตภัณฑ์ที่ได้จากการสีข้าว แต่ไม่รวมถึงไม้ซุง ฟืน หรือผลิตภัณฑ์ที่ได้จากการเลื่อยไม้หรือผลิตภัณฑ์อาหารที่บรรจุกระป๋อง ภาชนะหรือหีบห่อ ที่ทำเป็นอุตสาหกรรม ตามลักษณะ และเงื่อนไขที่อธิบดีกำหนด
(ข) การขายสัตว์ ไม่ว่าจะมีชีวิตหรือไม่มีชีวิต และในกรณีสัตว์ไม่มีชีวิตไม่ว่าจะเป็นเนื้อ ส่วนต่าง ๆ ของสัตว์ ไข่ น้ำนม และวัตถุพลอยได้จากสัตว์ ทั้งนี้ ที่อยู่ในสภาพสดหรือรักษาสภาพไว้เพื่อมิให้เสียเป็นการชั่วคราวในระหว่างขนส่งด้วยการแช่เย็น แช่เย็นจนแข็ง หรือด้วยการจัดทำหรือปรุงแต่งโดยวิธีการอื่น หรือรักษาสภาพไว้เพื่อมิให้เสียเพื่อการขายปลีกหรือขายส่งด้วยวิธีการแช่เย็น แช่เย็นจนแข็ง ทำให้แห้ง บด ทำให้เป็นชิ้น หรือด้วยวิธีอื่น แต่ไม่รวมถึงผลิตภัณฑ์อาหารที่บรรจุกระป๋อง ภาชนะ หรือหีบห่อ ที่ทำเป็นอุตสาหกรรม ตามลักษณะ และ เงื่อนไขที่อธิบดีกำหนด
(ค) การขายปุ๋ย
(ง) การขายปลาป่น อาหารสัตว์
(จ) การขายยาหรือเคมีภัณฑ์ที่ใช้สำหรับพืชหรือสัตว์ เพื่อบำรุงรักษาป้องกัน ทำลายหรือกำจัดศัตรูหรือโรคของพืชและสัตว์
(ฉ) การขายหนังสือพิมพ์ นิตยสาร หรือตำราเรียน
(ช) การให้บริการการศึกษาของสถานศึกษาของทางราชการ สถานศึกษาตามกฎหมายว่าด้วยสถาบันอุดมศึกษาเอกชน หรือโรงเรียนเอกชนตามกฎหมายว่าด้วยโรงเรียนเอกชน
(ซ) การให้บริการที่เป็นงานทางศิลปะและวัฒนธรรมในสาขา และลักษณะการประกอบกิจการที่อธิบดีกำหนดโดยอนุมัติรัฐมนตรี
(ฌ) การให้บริการการประกอบโรคศิลปะ การสอบบัญชี การว่าความหรือการประกอบวิชาชีพอิสระอื่นตามที่อธิบดีกำหนดโดยอนุมัติรัฐมนตรี ทั้งนี้ เฉพาะวิชาชีพอิสระที่มีกฎหมายควบคุมการประกอบวิชาชีพอิสระนั้น
(ญ) การให้บริการรักษาพยาบาลของสถานพยาบาลตามกฎหมายว่าด้วยสถานพยาบาล
(ฎ) การให้บริการวิจัย หรือการให้บริการทางวิชาการ ทั้งนี้ ในสาขา และลักษณะการประกอบกิจการที่อธิบดีกำหนดโดยอนุมัติรัฐมนตรี
(ฎ) การให้บริการห้องสมุด พิพิธภัณฑ์ สวนสัตว์
(ฐ) การให้บริการตามสัญญาจ้างแรงงาน
(ฑ) การให้บริการจัดแข่งขันกีฬาสมัครเล่น
(ฒ) การให้บริการของนักแสดงสาธารณะ ทั้งนี้ เฉพาะบริการในสาขาและลักษณะการประกอบกิจการตามที่อธิบดีกำหนดโดยอนุมัติรัฐมนตรี
(ณ) การให้บริการขนส่งในราชอาณาจักร
(ด) การให้บริการขนส่งระหว่างประเทศ ซึ่งมิใช่เป็นการขนส่งโดยอากาศยานหรือเรือเดินทะเล
(ต) การให้บริการเช่าอสังหาริมทรัพย์
(ถ) การให้บริการของราชการส่วนท้องถิ่น ทั้งนี้ ไม่รวมถึงบริการที่เป็นการพาณิชย์ของราชการส่วนท้องถิ่น หรือเป็นการหารายได้หรือผลประโยชน์ไม่ว่าจะเป็นกิจการสาธารณูปโภคหรือไม่ก็ตาม
(ท) การขายสินค้าหรือการให้บริการของกระทรวง ทบวง กรม ซึ่งส่งรายรับทั้งสิ้นให้แก่รัฐโดยไม่หักรายจ่าย
(ธ) การขายสินค้าหรือการให้บริการเพื่อประโยชน์แก่การศาสนาหรือการสาธารณกุศลภายในประเทศ ซึ่งไม่นำผลกำไรไปจ่ายในทางอื่น
(น) การขายสินค้าหรือการให้บริการตามที่กำหนดโดยพระราชกฤษฎีกา
(2) การนำเข้าสินค้าดังต่อไปนี้
(ก) สินค้าตาม (1) (ก) ถึง (ฉ)
(ข) สินค้าจากต่างประเทศที่นำเข้าไปในเขตปลอดอากร ทั้งนี้ เฉพาะสินค้าที่ได้รับยกเว้นอากรขาเข้าตามกฎหมายว่าด้วยการนั้น
(ค) สินค้าที่จำแนกประเภทไว้ในภาคว่าด้วยของที่ได้รับยกเว้นอากรตามกฎหมายว่าด้วยพิกัดอัตราศุลกากร
(ง) สินค้าซึ่งนำเข้าและอยู่ในอารักขาของศุลกากร แล้วได้ส่งกลับออกไปต่างประเทศ โดยได้คืนอากรขาเข้าตามกฎหมายว่าด้วยศุลกากร
(3) การส่งออกซึ่งสินค้าหรือบริการของผู้ประกอบการจดทะเบียนซึ่งต้องเสียภาษีมูลค่าเพิ่มตามมาตรา 82/16
การยกเว้นภาษีมูลค่าเพิ่มสำหรับการประกอบกิจการตามมาตรานี้ อธิบดีจะเสนอให้คณะกรรมการวินิจฉัยภาษีอากรพิจารณากำหนดลักษณะของกิจการและเงื่อนไขในการประกอบกิจการที่ได้รับการยกเว้นตามมาตรานี้ก็ได้ และเมื่อคณะกรรมการวินิจฉัยภาษีอากรได้วินิจฉัยแล้ว ให้ประกาศคำวินิจฉัยของคณะกรรมการดังกล่าวในราชกิจจานุเบกษาและหากกิจการนั้นมิได้เป็นไปตามลักษณะ และเงื่อนไขที่กำหนด กิจการนั้นจะไม่ได้รับยกเว้นภาษีมูลค่าเพิ่มตามมาตรานี้
</law>
</ข้อกฎหมาย>
<ข้อหารือ> บริษัท ธ. ประกอบกิจการให้บริการทางกฎหมายแก่บริษัทเงินทุน ธ. และบริษัทในเครือของ
บริษัทเงินทุน ธ. ซึ่งในการให้บริการทางกฎหมายจะแบ่งการให้บริการออกเป็น 2 ประเภท ดังต่อไปนี้
1. การให้บริการงานกฎหมายสำหรับร่างและตรวจสอบสัญญาและเอกสารทางกฎหมาย
รวมทั้งการให้คำปรึกษาทางกฎหมาย ตลอดจนประเมินราคาด้วย
2. การให้บริการงานกฎหมายสำหรับงานว่าความมีขอบเขตให้บริการเริ่มตั้งแต่ติดตาม
ทวงถาม เร่งรัดหนี้ ฟ้องคดี และบังคับคดี
บริษัทฯ จึงหารือว่า การให้บริการทั้ง 2 กรณีดังกล่าว จะได้รับยกเว้นภาษี มูลค่าเพิ่มหรือไม่ </ข้อหารือ>
<reference_answer> การให้บริการงานว่าความได้รับการยกเว้นไม่ต้องเสียภาษีมูลค่าเพิ่ม ส่วนค่าบริการอื่น ๆ ไม่ได้รับการยกเว้นภาษีมูลค่าเพิ่มแต่อย่างใด </reference_answer>
<student_answer> การให้บริการทั้ง 2 กรณีดังกล่าวจะไม่ได้รับยกเว้นภาษีมูลค่าเพิ่ม และจะต้องเสียภาษีมูลค่าเพิ่มตามอัตราปกติ </student_answer>


<assistant> ```json
{"coverage": {"thought": "Caution:
    1. MAKE SURE TO PROVIDE A REASONABLE THOUGHT PROCESS AS WELL.
    2. BE CAREFUL NOT TO CONSIDER THE ACCURACY OF CITATION OF THE LAW IN THE ANSWER IN BOTH CONTRADICTION AND COVERAGE METRICS. THERE IS A SEPARATE METRIC FOR THAT. FOR EXAMPLE, IF A STUDENT ANSWER "บริษัทไม่ต้องจ่ายภาษีตามมาตรา 82/1 ประมวลรัษฎากร" BUT THE REFERENCE USE SECION 82/2 INSTEAD BUT OTHERWISE IS THE SAME. THE COVERAGE SCORE IS 100 WHILE THE CONTRADICTION SCORE IS 0. PLEASE BE VERY CAREFUL OF THIS!!!
    3. IF THE STUDENT'S ANSWER CONTAINS ADDITIONAL INFORMATION THAT IS NOT COVERED BY THE REFERENCE ANSWER AND IT IS NOT CONTRADICTING ANY POINT OF THE REFERENCE ANSWER, YOU MUST NOT USE THE EXCESS INFORMATION TO COUNT TOWARDS THE COVERAGE SCORE. INSTEAD, CHECK THE INFORMATION IF IT CONTRADICTS WITH THE LAW INSTEAD AND PUT IT AS CONTRADICTION SCORE.
    4. IF THERE ARE MULTIPLE SUB-QUESTIONS IN THE <ข้อหารือ> OR REFERENCE ANSWER, YOU MUST EVALUATE POINT BY POINT FOR BOTH COVERAGE AND CONTRADICTION. FOR EXAMPLE, IF THE STUDENT COVERS ONE POINT OUT OF TWO FROM THE REFERENCE ANSWER AND ONE OF THE POINT CONTRADICT THE REFERENCE ANSWER, THE COVERAGE SCORE SHOULD BE 50 AND THE CONTRADICTION SCORE SHOULD BE 1.
    5. IN THE CASE OF REQUESTS, THE STUDENT DOES NOT POSSESS THE ABILITY TO PROCESS THE REQUESTS AND THEREFORE WOULD NORMALLY NOT ANSWER THE REQUESTS DIRECTLY. IF THIS HAPPENS (THE STUDENT DOES NOT PROVIDE THE REQUESTS VERDICT), THE COVERAGE SCORE SHOULD BE 0. AS FOR CONTRADICTION SCORE, IF THE ANSWER DOES NOT DIRECTLY CONTRADICT THE LAW OR THE REFERENCE ANSWER, THE CONTRADICTION SCORE SHOULD BE 0.
    
    Even though it seems like the student is making one point only, the student is making two points saying that 1. Legal service is not exempted from VAT 2. Other services are not exempted from VAT. The second point aligns well with the reference answer first point which says that the other service is not exempted from VAT while the first point contradicts with the reference answer's first point which says that legal service is exempted from VAT. Therefore, the student answer covers 1 out of 2 points made by reference answer and should get a score of 50", "grade": 50}, "contradiction": {"thought": "The student answer incorrectly says that the legal services is not exempted from VAT which directly contradicts the first point provided by the reference answer and , thus, should get contradiction score of 1.", "grade": 1}}
```